--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AES-256-GCM</title>
   <style>
-    :root{--bg0:#030305;--bg2:#0b0e14;--fg:#f3f4f7;--line:rgba(255,255,255,.10);--shadow:rgba(0,0,0,.78);--r:12px}
+    :root{--bg0:#030305;--bg2:#0b0e14;--fg:#f3f4f7;--line:rgba(255,255,255,.10);--shadow:rgba(0,0,0,.78);--r:14px}
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      min-height:100%;
-      padding:22px 0;
-      display:flex;
-      justify-content:center;
-      align-items:flex-start;
+      margin:0; min-height:100%;
+      padding:18px 0;
+      display:flex; justify-content:center; align-items:flex-start;
       color:var(--fg);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-      overflow:auto;
-      -webkit-overflow-scrolling:touch;
+      overflow:auto; -webkit-overflow-scrolling:touch;
       background:
         radial-gradient(1200px 900px at 18% 10%, rgba(120,170,255,.09), transparent 62%),
         radial-gradient(900px 700px at 86% 18%, rgba(140,120,255,.06), transparent 60%),
@@ -26,19 +22,14 @@
         linear-gradient(180deg,var(--bg0),var(--bg2));
     }
     .sky{
-      position:fixed; inset:0;
-      pointer-events:none;
-      z-index:0;
-      opacity:.9;
+      position:fixed; inset:0; pointer-events:none; z-index:0; opacity:.9;
       background:
         radial-gradient(1000px 700px at 25% 20%, rgba(255,255,255,.05), transparent 65%),
         radial-gradient(900px 680px at 78% 30%, rgba(255,255,255,.03), transparent 65%),
         radial-gradient(800px 650px at 55% 85%, rgba(255,255,255,.025), transparent 70%);
     }
     .sky::before{
-      content:"";
-      position:absolute; inset:0;
-      opacity:.72;
+      content:""; position:absolute; inset:0; opacity:.72;
       background-image:
         radial-gradient(1px 1px at 8% 12%, rgba(255,255,255,.95), transparent 60%),
         radial-gradient(1px 1px at 16% 28%, rgba(255,255,255,.70), transparent 60%),
@@ -55,27 +46,33 @@
         radial-gradient(1px 1px at 92% 18%, rgba(255,255,255,.58), transparent 60%),
         radial-gradient(1px 1px at 94% 74%, rgba(255,255,255,.66), transparent 60%);
     }
-    .wrap{position:relative; z-index:2; width:min(980px,92vw); padding:0 18px 18px}
-    .box{
-      width:100%;
-      border-radius:18px;
-      background:linear-gradient(180deg, rgba(255,255,255,.055), rgba(255,255,255,.03));
-      border:1px solid rgba(255,255,255,.10);
-      box-shadow:0 26px 70px rgba(0,0,0,.62), inset 0 1px 0 rgba(255,255,255,.055);
+    .wrap{position:relative; z-index:2; width:min(980px,92vw); padding:0 16px 16px}
+    .shell{
+      border-radius:22px;
+      background:linear-gradient(180deg, rgba(255,255,255,.060), rgba(255,255,255,.028));
+      border:1px solid rgba(255,255,255,.11);
+      box-shadow:0 30px 80px rgba(0,0,0,.62), inset 0 1px 0 rgba(255,255,255,.06);
       backdrop-filter:blur(10px);
       overflow:hidden;
-      position:relative;
     }
-    .inner{position:relative; padding:20px}
-    .top{display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:14px; flex-wrap:nowrap}
-    h1{
-      margin:0; font-size:16px; letter-spacing:.55px; opacity:.95; text-transform:uppercase;
-      flex:1 1 auto; min-width:0; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
+    .appbar{
+      display:flex; align-items:center; justify-content:space-between;
+      gap:12px;
+      padding:14px 16px;
+      border-bottom:1px solid rgba(255,255,255,.08);
+      background:linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.05));
     }
-    .right{display:flex; gap:10px; align-items:center; justify-content:flex-end; flex:0 0 auto}
+    .brand{
+      display:flex; flex-direction:column; gap:2px; min-width:0;
+    }
+    .brand .t{font-size:13px; letter-spacing:.6px; text-transform:uppercase; opacity:.95; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
+    .brand .s{font-size:11px; opacity:.60; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
+    .actions{display:flex; gap:10px; align-items:center; flex:0 0 auto}
+    .content{padding:18px}
     .row{display:flex; gap:12px; flex-wrap:wrap; margin:12px 0}
-    .two{display:grid; grid-template-columns:1fr 1fr; gap:12px; width:100%}
-    .two>button{width:100%}
+    .grid2{display:grid; grid-template-columns:1fr 1fr; gap:12px; width:100%}
+    .grid2 > *{width:100%}
+
     input,textarea,button,label{
       border-radius:var(--r);
       border:1px solid rgba(255,255,255,.12);
@@ -93,7 +90,7 @@
     button,label{cursor:pointer; user-select:none; display:inline-flex; align-items:center; justify-content:center; gap:8px}
     button:hover,label:hover{border-color:rgba(230,235,255,.22); box-shadow:0 12px 26px rgba(0,0,0,.40),0 0 0 3px rgba(200,210,255,.06); transform:translateY(-1px)}
     button:active,label:active{transform:translateY(1px) scale(.99)}
-    .pillbtn{
+    .pill{
       padding:9px 12px;
       border-radius:999px;
       font-size:12px;
@@ -102,22 +99,30 @@
       border-color:rgba(255,255,255,.16);
       box-shadow:inset 0 1px 0 rgba(255,255,255,.08)
     }
-    .btn-primary{
+    .primary{
       border-color:rgba(210,220,255,.18);
-      background:linear-gradient(90deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+      background:linear-gradient(90deg, rgba(255,255,255,.085), rgba(255,255,255,.045));
       box-shadow:inset 0 1px 0 rgba(255,255,255,.10)
+    }
+    .danger{
+      background:linear-gradient(90deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
     }
     .mini{flex:0; min-width:190px}
     .pwwrap{display:flex; gap:12px; flex:1; min-width:260px}
     .pwwrap input{flex:1; min-width:0}
     .pwbtn{flex:0; min-width:130px}
-    .filewrap{display:flex; gap:12px; width:100%; align-items:center; flex-wrap:wrap}
-    .filebtn{flex:0 0 auto; min-width:160px}
-    .filemeta{flex:1 1 auto; min-width:240px; padding:13px 14px; border-radius:var(--r); border:1px solid rgba(255,255,255,.10); background:rgba(0,0,0,.22); color:rgba(243,244,247,.78)}
+    .filemeta{
+      flex:1 1 auto;
+      min-width:240px;
+      padding:13px 14px;
+      border-radius:var(--r);
+      border:1px solid rgba(255,255,255,.10);
+      background:rgba(0,0,0,.22);
+      color:rgba(243,244,247,.78);
+    }
     .mono{font-variant-ligatures:none; font-feature-settings:"liga" 0; letter-spacing:.15px; word-break:break-word}
     .toast{
-      position:fixed; left:50%; bottom:22px;
-      transform:translateX(-50%);
+      position:fixed; left:50%; bottom:22px; transform:translateX(-50%);
       background:rgba(0,0,0,.74);
       border:1px solid rgba(255,255,255,.18);
       padding:10px 14px;
@@ -131,19 +136,14 @@
     }
     .toast.show{opacity:1; transform:translateX(-50%) translateY(-2px)}
     .disabled{opacity:.45; pointer-events:none; filter:saturate(.75)}
+
     .modal{
       position:fixed; inset:0;
-      display:none;
-      align-items:center; justify-content:center;
-      z-index:40;
-      padding:18px;
+      display:none; align-items:center; justify-content:center;
+      z-index:40; padding:18px;
     }
     .modal.show{display:flex}
-    .modal .backdrop{
-      position:absolute; inset:0;
-      background:rgba(0,0,0,.62);
-      backdrop-filter:blur(6px);
-    }
+    .modal .backdrop{position:absolute; inset:0; background:rgba(0,0,0,.62); backdrop-filter:blur(6px)}
     .modal .card{
       position:relative;
       width:min(760px, 94vw);
@@ -158,16 +158,17 @@
     .modal textarea{min-height:140px; width:100%; background:rgba(0,0,0,.34); border-color:rgba(255,255,255,.14)}
     .modal .actions{display:flex; gap:12px; justify-content:flex-end; margin-top:14px; flex-wrap:wrap}
     .modal .actions button{min-width:130px}
+
     @media (max-width:420px){
       input,textarea{min-width:0}
       .mini{min-width:0; flex:1}
       .pwbtn{min-width:110px}
       .pwwrap{min-width:0}
-      .filebtn{min-width:140px}
-      body{padding:16px 0}
+      body{padding:14px 0}
       .wrap{padding:0 14px 14px}
-      .inner{padding:18px}
-      .two{grid-template-columns:1fr}
+      .content{padding:16px}
+      .grid2{grid-template-columns:1fr}
+      textarea{min-height:150px}
     }
   </style>
 </head>
@@ -175,15 +176,18 @@
   <div class="sky" aria-hidden="true"></div>
 
   <div class="wrap">
-    <div class="box">
-      <div class="inner">
-        <div class="top">
-          <h1>AES-256-GCM</h1>
-          <div class="right">
-            <button id="btnSafe" class="pillbtn">BẢO MẬT : TẮT</button>
-          </div>
+    <div class="shell">
+      <div class="appbar">
+        <div class="brand">
+          <div class="t">AES-256-GCM</div>
+          <div class="s">PBKDF2 (SHA-256) + AES-GCM • v3 / v3f</div>
         </div>
+        <div class="actions">
+          <button id="btnSafe" class="pill">BẢO MẬT : TẮT</button>
+        </div>
+      </div>
 
+      <div class="content">
         <div class="row">
           <input id="plain" placeholder="Văn bản gốc" value="" autocomplete="off" />
           <input id="iters" class="mini" type="number" value="100000" min="100000" step="100000" inputmode="numeric" />
@@ -196,34 +200,28 @@
           </div>
         </div>
 
-        <div class="row two">
-          <button id="btnEncText" class="btn-primary">MÃ HOÁ VĂN BẢN</button>
-          <button id="btnDecAny">GIẢI MÃ</button>
+        <div class="row grid2">
+          <button id="btnEncrypt" class="primary">MÃ HOÁ</button>
+          <button id="btnDecrypt">GIẢI MÃ</button>
+        </div>
+
+        <div class="row grid2">
+          <input id="file" type="file" hidden />
+          <label for="file" id="btnPick" class="pill">CHỌN FILE</label>
+          <button id="btnDownload" class="pill">TẢI FILE</button>
+          <button id="btnClear" class="danger">XOÁ</button>
         </div>
 
         <div class="row">
-          <div class="filewrap">
-            <input id="file" type="file" hidden />
-            <label for="file" class="filebtn">CHỌN FILE</label>
-            <div id="filemeta" class="filemeta mono">Chưa chọn file</div>
-          </div>
-        </div>
-
-        <div class="row">
-          <button id="btnEncFile" class="btn-primary">MÃ HOÁ FILE → TOKEN</button>
-          <button id="btnDownload" class="pillbtn">TẢI FILE (SAU GIẢI MÃ)</button>
+          <div id="filemeta" class="filemeta mono">Chưa chọn file</div>
         </div>
 
         <div class="row">
           <textarea id="token" class="mono" spellcheck="false" placeholder="Token mã hoá (v3... hoặc v3f...)"></textarea>
         </div>
 
-        <div class="row two">
+        <div class="row grid2">
           <button id="btnCopy">SAO CHÉP</button>
-          <button id="btnClear">XOÁ</button>
-        </div>
-
-        <div class="row">
           <input id="out" placeholder="Kết quả (văn bản)" autocomplete="off" />
         </div>
       </div>
@@ -240,7 +238,7 @@
         <textarea id="modalPlainText" spellcheck="false" placeholder="Nhập nội dung..."></textarea>
         <div class="actions">
           <button id="modalPlainCancel">Huỷ</button>
-          <button id="modalPlainOk" class="btn-primary">OK</button>
+          <button id="modalPlainOk" class="primary">OK</button>
         </div>
       </div>
     </div>
@@ -254,7 +252,7 @@
         <textarea id="modalOutText" spellcheck="false" readonly></textarea>
         <div class="actions">
           <button id="modalOutCopy">Sao chép</button>
-          <button id="modalOutClose" class="btn-primary">Đóng</button>
+          <button id="modalOutClose" class="primary">Đóng</button>
         </div>
       </div>
     </div>
@@ -440,39 +438,6 @@
     if (SAFE_MODE) $("plain").value = "";
   }
 
-  async function encryptText(){
-    try{
-      const plain = await getPlaintextForEncrypt();
-      const pass = $("pass").value;
-
-      if (!plain) throw new Error("Bạn chưa nhập văn bản gốc.");
-      if (!pass || pass.length < 10) throw new Error("Mật khẩu quá yếu.");
-
-      const iters = getIters();
-      const salt = crypto.getRandomValues(new Uint8Array(16));
-      const nonce = crypto.getRandomValues(new Uint8Array(12));
-
-      const aesKey = await deriveAesKeyFromPass(pass, salt, iters);
-
-      const ctAll = new Uint8Array(await crypto.subtle.encrypt(
-        { name:"AES-GCM", iv: nonce },
-        aesKey,
-        enc.encode(plain)
-      ));
-
-      const ciphertext = ctAll.slice(0, ctAll.length - 16);
-      const tag = ctAll.slice(ctAll.length - 16);
-
-      $("token").value = `v3.${iters}.${b64url(salt)}.${b64url(nonce)}.${b64url(ciphertext)}.${b64url(tag)}`;
-
-      clearSensitiveAfterUse();
-      toast("Đã mã hoá");
-    }catch(e){
-      toast("Có lỗi");
-      if (!SAFE_MODE) $("out").value = "Mã hoá thất bại: " + (e?.message || e);
-    }
-  }
-
   let SELECTED_FILE = null;
   let LAST_DECRYPTED_FILE = null;
 
@@ -488,40 +453,65 @@
     $("filemeta").textContent = `${SELECTED_FILE.name} • ${s} • ${SELECTED_FILE.type || "application/octet-stream"}`;
   });
 
+  async function encryptText(){
+    const plain = await getPlaintextForEncrypt();
+    const pass = $("pass").value;
+
+    if (!plain) throw new Error("Bạn chưa nhập văn bản gốc.");
+    if (!pass || pass.length < 10) throw new Error("Mật khẩu quá yếu.");
+
+    const iters = getIters();
+    const salt = crypto.getRandomValues(new Uint8Array(16));
+    const nonce = crypto.getRandomValues(new Uint8Array(12));
+    const aesKey = await deriveAesKeyFromPass(pass, salt, iters);
+
+    const ctAll = new Uint8Array(await crypto.subtle.encrypt(
+      { name:"AES-GCM", iv: nonce }, aesKey, enc.encode(plain)
+    ));
+
+    const ciphertext = ctAll.slice(0, ctAll.length - 16);
+    const tag = ctAll.slice(ctAll.length - 16);
+
+    $("token").value = `v3.${iters}.${b64url(salt)}.${b64url(nonce)}.${b64url(ciphertext)}.${b64url(tag)}`;
+    clearSensitiveAfterUse();
+    toast("Đã mã hoá");
+  }
+
   async function encryptFile(){
+    if (!SELECTED_FILE) throw new Error("Bạn chưa chọn file.");
+    const pass = $("pass").value;
+    if (!pass || pass.length < 10) throw new Error("Mật khẩu quá yếu.");
+
+    const iters = getIters();
+    const salt = crypto.getRandomValues(new Uint8Array(16));
+    const nonce = crypto.getRandomValues(new Uint8Array(12));
+    const aesKey = await deriveAesKeyFromPass(pass, salt, iters);
+
+    const buf = await SELECTED_FILE.arrayBuffer();
+    const data = new Uint8Array(buf);
+
+    const ctAll = new Uint8Array(await crypto.subtle.encrypt(
+      { name:"AES-GCM", iv: nonce }, aesKey, data
+    ));
+
+    const ciphertext = ctAll.slice(0, ctAll.length - 16);
+    const tag = ctAll.slice(ctAll.length - 16);
+
+    const nameB64 = strToB64url(SELECTED_FILE.name);
+    const mimeB64 = strToB64url(SELECTED_FILE.type || "application/octet-stream");
+
+    $("token").value = `v3f.${iters}.${b64url(salt)}.${b64url(nonce)}.${nameB64}.${mimeB64}.${b64url(ciphertext)}.${b64url(tag)}`;
+    clearSensitiveAfterUse();
+    toast("Đã mã hoá file");
+  }
+
+  async function encryptUnified(){
     try{
-      if (!SELECTED_FILE) throw new Error("Bạn chưa chọn file.");
-      const pass = $("pass").value;
-      if (!pass || pass.length < 10) throw new Error("Mật khẩu quá yếu.");
-
-      const iters = getIters();
-      const salt = crypto.getRandomValues(new Uint8Array(16));
-      const nonce = crypto.getRandomValues(new Uint8Array(12));
-
-      const aesKey = await deriveAesKeyFromPass(pass, salt, iters);
-
-      const buf = await SELECTED_FILE.arrayBuffer();
-      const data = new Uint8Array(buf);
-
-      const ctAll = new Uint8Array(await crypto.subtle.encrypt(
-        { name:"AES-GCM", iv: nonce },
-        aesKey,
-        data
-      ));
-
-      const ciphertext = ctAll.slice(0, ctAll.length - 16);
-      const tag = ctAll.slice(ctAll.length - 16);
-
-      const nameB64 = strToB64url(SELECTED_FILE.name);
-      const mimeB64 = strToB64url(SELECTED_FILE.type || "application/octet-stream");
-
-      $("token").value = `v3f.${iters}.${b64url(salt)}.${b64url(nonce)}.${nameB64}.${mimeB64}.${b64url(ciphertext)}.${b64url(tag)}`;
-
-      clearSensitiveAfterUse();
-      toast("Đã mã hoá file");
+      if (SELECTED_FILE) await encryptFile();
+      else await encryptText();
     }catch(e){
       toast("Có lỗi");
-      if (!SAFE_MODE) $("out").value = "Mã hoá file thất bại: " + (e?.message || e);
+      if (!SAFE_MODE) $("out").value = "Mã hoá thất bại: " + (e?.message || e);
     }
   }
 
@@ -554,20 +544,14 @@
         ctAll.set(tag, ciphertext.length);
 
         const pt = new Uint8Array(await crypto.subtle.decrypt(
-          { name:"AES-GCM", iv: nonce },
-          aesKey,
-          ctAll
+          { name:"AES-GCM", iv: nonce }, aesKey, ctAll
         ));
 
         const text = dec.decode(pt);
         LAST_DECRYPTED_FILE = null;
 
-        if (SAFE_MODE) {
-          $("out").value = "";
-          await showModalOut(text);
-        } else {
-          $("out").value = text;
-        }
+        if (SAFE_MODE) { $("out").value = ""; await showModalOut(text); }
+        else $("out").value = text;
 
         clearSensitiveAfterUse();
         toast("Đã giải mã");
@@ -594,20 +578,14 @@
         ctAll.set(tag, ciphertext.length);
 
         const pt = new Uint8Array(await crypto.subtle.decrypt(
-          { name:"AES-GCM", iv: nonce },
-          aesKey,
-          ctAll
+          { name:"AES-GCM", iv: nonce }, aesKey, ctAll
         ));
 
         LAST_DECRYPTED_FILE = { name: fileName || "file.bin", mime: mime || "application/octet-stream", bytes: pt };
 
         const msg = `Đã giải mã file: ${LAST_DECRYPTED_FILE.name} (${LAST_DECRYPTED_FILE.bytes.length} bytes)`;
-        if (SAFE_MODE) {
-          $("out").value = "";
-          await showModalOut(msg);
-        } else {
-          $("out").value = msg;
-        }
+        if (SAFE_MODE) { $("out").value = ""; await showModalOut(msg); }
+        else $("out").value = msg;
 
         clearSensitiveAfterUse();
         toast("Đã giải mã file");
@@ -670,9 +648,8 @@
     $("btnTogglePass").textContent = isPw ? "ẨN" : "HIỆN";
   }
 
-  $("btnEncText").addEventListener("click", encryptText);
-  $("btnEncFile").addEventListener("click", encryptFile);
-  $("btnDecAny").addEventListener("click", decryptAny);
+  $("btnEncrypt").addEventListener("click", encryptUnified);
+  $("btnDecrypt").addEventListener("click", decryptAny);
   $("btnDownload").addEventListener("click", downloadDecryptedFile);
   $("btnCopy").addEventListener("click", copyToken);
   $("btnClear").addEventListener("click", clearAll);
