--- a/index.html
+++ b/index.html
@@ -5,124 +5,228 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>AES-256-GCM</title>
   <style>
-    :root{--bg0:#030305;--bg2:#0b0e14;--fg:#f3f4f7;--line:rgba(255,255,255,.10);--shadow:rgba(0,0,0,.78);--r:14px}
+    :root{
+      --bg0:#06070b;
+      --bg1:#0b1020;
+      --bg2:#070a12;
+      --fg:#eef2ff;
+
+      --line:rgba(255,255,255,.10);
+      --shadow:rgba(0,0,0,.78);
+
+      --card:rgba(10,12,18,.58);
+      --field:rgba(10,12,18,.52);
+
+      --g1:linear-gradient(135deg, rgba(82,170,255,.22), rgba(148,92,255,.16), rgba(0,255,209,.10));
+      --g2:linear-gradient(135deg, rgba(0,255,209,.18), rgba(82,170,255,.18), rgba(148,92,255,.14));
+      --gbtn:linear-gradient(135deg, rgba(82,170,255,.26), rgba(148,92,255,.20), rgba(0,255,209,.14));
+
+      --r:14px;
+    }
+
     *{box-sizing:border-box}
     html,body{height:100%}
+
     body{
-      margin:0; min-height:100%;
+      margin:0;
+      min-height:100%;
       padding:18px 0;
-      display:flex; justify-content:center; align-items:flex-start;
+      display:flex;
+      justify-content:center;
+      align-items:flex-start;
       color:var(--fg);
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
-      overflow:auto; -webkit-overflow-scrolling:touch;
+      overflow:auto;
+      -webkit-overflow-scrolling:touch;
       background:
-        radial-gradient(1200px 900px at 18% 10%, rgba(120,170,255,.09), transparent 62%),
-        radial-gradient(900px 700px at 86% 18%, rgba(140,120,255,.06), transparent 60%),
-        radial-gradient(900px 700px at 50% 92%, rgba(110,220,255,.05), transparent 64%),
-        linear-gradient(180deg,var(--bg0),var(--bg2));
+        radial-gradient(1100px 800px at 18% 16%, rgba(82,170,255,.14), transparent 62%),
+        radial-gradient(900px 700px at 88% 18%, rgba(148,92,255,.11), transparent 60%),
+        radial-gradient(900px 740px at 55% 92%, rgba(0,255,209,.08), transparent 64%),
+        linear-gradient(180deg,var(--bg0),var(--bg1));
     }
-    .sky{
-      position:fixed; inset:0; pointer-events:none; z-index:0; opacity:.9;
+
+    .glow{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      z-index:0;
+      opacity:.95;
       background:
-        radial-gradient(1000px 700px at 25% 20%, rgba(255,255,255,.05), transparent 65%),
-        radial-gradient(900px 680px at 78% 30%, rgba(255,255,255,.03), transparent 65%),
-        radial-gradient(800px 650px at 55% 85%, rgba(255,255,255,.025), transparent 70%);
+        radial-gradient(900px 650px at 30% 22%, rgba(255,255,255,.05), transparent 68%),
+        radial-gradient(900px 650px at 80% 34%, rgba(255,255,255,.035), transparent 70%),
+        radial-gradient(900px 650px at 50% 88%, rgba(255,255,255,.025), transparent 70%);
     }
-    .sky::before{
-      content:""; position:absolute; inset:0; opacity:.72;
-      background-image:
-        radial-gradient(1px 1px at 8% 12%, rgba(255,255,255,.95), transparent 60%),
-        radial-gradient(1px 1px at 16% 28%, rgba(255,255,255,.70), transparent 60%),
-        radial-gradient(1px 1px at 22% 76%, rgba(255,255,255,.75), transparent 60%),
-        radial-gradient(1px 1px at 31% 44%, rgba(255,255,255,.65), transparent 60%),
-        radial-gradient(1px 1px at 38% 18%, rgba(255,255,255,.60), transparent 60%),
-        radial-gradient(1px 1px at 44% 62%, rgba(255,255,255,.80), transparent 60%),
-        radial-gradient(1px 1px at 52% 26%, rgba(255,255,255,.70), transparent 60%),
-        radial-gradient(1px 1px at 58% 78%, rgba(255,255,255,.65), transparent 60%),
-        radial-gradient(1px 1px at 64% 48%, rgba(255,255,255,.62), transparent 60%),
-        radial-gradient(1px 1px at 71% 22%, rgba(255,255,255,.60), transparent 60%),
-        radial-gradient(1px 1px at 78% 66%, rgba(255,255,255,.78), transparent 60%),
-        radial-gradient(1px 1px at 86% 38%, rgba(255,255,255,.62), transparent 60%),
-        radial-gradient(1px 1px at 92% 18%, rgba(255,255,255,.58), transparent 60%),
-        radial-gradient(1px 1px at 94% 74%, rgba(255,255,255,.66), transparent 60%);
+
+    .wrap{
+      position:relative;
+      z-index:2;
+      width:min(980px,92vw);
+      padding:0 16px 16px;
     }
-    .wrap{position:relative; z-index:2; width:min(980px,92vw); padding:0 16px 16px}
+
     .shell{
       border-radius:22px;
-      background:linear-gradient(180deg, rgba(255,255,255,.060), rgba(255,255,255,.028));
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
       border:1px solid rgba(255,255,255,.11);
       box-shadow:0 30px 80px rgba(0,0,0,.62), inset 0 1px 0 rgba(255,255,255,.06);
       backdrop-filter:blur(10px);
       overflow:hidden;
     }
+
     .appbar{
-      display:flex; align-items:center; justify-content:space-between;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
       gap:12px;
       padding:14px 16px;
       border-bottom:1px solid rgba(255,255,255,.08);
-      background:linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.05));
+      background:
+        radial-gradient(120% 160% at 20% 30%, rgba(82,170,255,.14), transparent 55%),
+        radial-gradient(120% 160% at 86% 20%, rgba(148,92,255,.10), transparent 55%),
+        linear-gradient(180deg, rgba(0,0,0,.22), rgba(0,0,0,.06));
     }
+
     .brand{
-      display:flex; flex-direction:column; gap:2px; min-width:0;
+      display:flex;
+      flex-direction:column;
+      gap:2px;
+      min-width:0;
     }
-    .brand .t{font-size:13px; letter-spacing:.6px; text-transform:uppercase; opacity:.95; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
-    .brand .s{font-size:11px; opacity:.60; white-space:nowrap; overflow:hidden; text-overflow:ellipsis}
-    .actions{display:flex; gap:10px; align-items:center; flex:0 0 auto}
+
+    .brand .t{
+      font-size:13px;
+      letter-spacing:.6px;
+      text-transform:uppercase;
+      opacity:.95;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .actions{
+      display:flex;
+      gap:10px;
+      align-items:center;
+      flex:0 0 auto;
+    }
+
     .content{padding:18px}
-    .row{display:flex; gap:12px; flex-wrap:wrap; margin:12px 0}
-    .grid2{display:grid; grid-template-columns:1fr 1fr; gap:12px; width:100%}
+
+    .row{
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      margin:12px 0;
+    }
+
+    .grid2{
+      display:grid;
+      grid-template-columns:1fr 1fr;
+      gap:12px;
+      width:100%;
+    }
+
     .grid2 > *{width:100%}
 
     input,textarea,button,label{
       border-radius:var(--r);
       border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.30);
+      background:var(--field);
       color:var(--fg);
       padding:13px 14px;
       font-size:14px;
       outline:none;
       transition:transform .14s ease,border-color .18s ease,background .18s ease,box-shadow .18s ease,filter .18s ease;
     }
-    textarea{width:100%; min-height:160px; resize:vertical; line-height:1.35}
-    input,textarea{flex:1; min-width:240px}
-    input::placeholder,textarea::placeholder{color:rgba(243,244,247,.42)}
-    input:focus,textarea:focus{border-color:rgba(200,210,255,.26); box-shadow:0 0 0 3px rgba(180,190,255,.09)}
-    button,label{cursor:pointer; user-select:none; display:inline-flex; align-items:center; justify-content:center; gap:8px}
-    button:hover,label:hover{border-color:rgba(230,235,255,.22); box-shadow:0 12px 26px rgba(0,0,0,.40),0 0 0 3px rgba(200,210,255,.06); transform:translateY(-1px)}
+
+    textarea{
+      width:100%;
+      min-height:160px;
+      resize:vertical;
+      line-height:1.35;
+    }
+
+    input,textarea{flex:1;min-width:240px}
+
+    input::placeholder,textarea::placeholder{color:rgba(238,242,255,.42)}
+
+    input:focus,textarea:focus{
+      border-color:rgba(180,210,255,.26);
+      box-shadow:0 0 0 3px rgba(120,170,255,.10);
+    }
+
+    button,label{
+      cursor:pointer;
+      user-select:none;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      gap:8px;
+      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(0,0,0,.22));
+    }
+
+    button:hover,label:hover{
+      border-color:rgba(230,235,255,.22);
+      box-shadow:0 14px 28px rgba(0,0,0,.44),0 0 0 3px rgba(120,170,255,.07);
+      transform:translateY(-1px);
+      filter:saturate(1.06);
+    }
+
     button:active,label:active{transform:translateY(1px) scale(.99)}
+
     .pill{
       padding:9px 12px;
       border-radius:999px;
       font-size:12px;
       white-space:nowrap;
-      background:linear-gradient(90deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+      background:linear-gradient(135deg, rgba(82,170,255,.18), rgba(148,92,255,.12), rgba(0,255,209,.10));
       border-color:rgba(255,255,255,.16);
-      box-shadow:inset 0 1px 0 rgba(255,255,255,.08)
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.08);
     }
-    .primary{
-      border-color:rgba(210,220,255,.18);
-      background:linear-gradient(90deg, rgba(255,255,255,.085), rgba(255,255,255,.045));
-      box-shadow:inset 0 1px 0 rgba(255,255,255,.10)
+
+    .btnG{
+      background:var(--gbtn);
+      border-color:rgba(190,220,255,.18);
+      box-shadow:inset 0 1px 0 rgba(255,255,255,.10);
     }
+
+    .btnSoft{
+      background:linear-gradient(135deg, rgba(255,255,255,.05), rgba(0,0,0,.22));
+    }
+
     .danger{
-      background:linear-gradient(90deg, rgba(255,255,255,.06), rgba(255,255,255,.02));
+      background:linear-gradient(135deg, rgba(255,80,110,.14), rgba(148,92,255,.12), rgba(0,0,0,.22));
+      border-color:rgba(255,255,255,.12);
     }
-    .mini{flex:0; min-width:190px}
-    .pwwrap{display:flex; gap:12px; flex:1; min-width:260px}
-    .pwwrap input{flex:1; min-width:0}
-    .pwbtn{flex:0; min-width:130px}
+
+    .mini{flex:0;min-width:190px}
+
+    .pwwrap{display:flex;gap:12px;flex:1;min-width:260px}
+    .pwwrap input{flex:1;min-width:0}
+    .pwbtn{flex:0;min-width:130px}
+
     .filemeta{
       flex:1 1 auto;
       min-width:240px;
       padding:13px 14px;
       border-radius:var(--r);
       border:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.22);
-      color:rgba(243,244,247,.78);
+      background:var(--field);
+      color:rgba(238,242,255,.78);
     }
-    .mono{font-variant-ligatures:none; font-feature-settings:"liga" 0; letter-spacing:.15px; word-break:break-word}
+
+    .mono{
+      font-variant-ligatures:none;
+      font-feature-settings:"liga" 0;
+      letter-spacing:.15px;
+      word-break:break-word;
+    }
+
     .toast{
-      position:fixed; left:50%; bottom:22px; transform:translateX(-50%);
+      position:fixed;
+      left:50%;
+      bottom:22px;
+      transform:translateX(-50%);
       background:rgba(0,0,0,.74);
       border:1px solid rgba(255,255,255,.18);
       padding:10px 14px;
@@ -134,53 +238,77 @@
       box-shadow:0 12px 26px var(--shadow);
       z-index:30;
     }
-    .toast.show{opacity:1; transform:translateX(-50%) translateY(-2px)}
-    .disabled{opacity:.45; pointer-events:none; filter:saturate(.75)}
+
+    .toast.show{opacity:1;transform:translateX(-50%) translateY(-2px)}
+
+    .disabled{opacity:.45;pointer-events:none;filter:saturate(.75)}
 
     .modal{
-      position:fixed; inset:0;
-      display:none; align-items:center; justify-content:center;
-      z-index:40; padding:18px;
+      position:fixed;
+      inset:0;
+      display:none;
+      align-items:center;
+      justify-content:center;
+      z-index:40;
+      padding:18px;
     }
+
     .modal.show{display:flex}
-    .modal .backdrop{position:absolute; inset:0; background:rgba(0,0,0,.62); backdrop-filter:blur(6px)}
+
+    .modal .backdrop{
+      position:absolute;
+      inset:0;
+      background:rgba(0,0,0,.62);
+      backdrop-filter:blur(6px);
+    }
+
     .modal .card{
       position:relative;
       width:min(760px, 94vw);
       border-radius:18px;
       border:1px solid rgba(255,255,255,.14);
-      background:linear-gradient(180deg, rgba(255,255,255,.055), rgba(0,0,0,.38));
+      background:
+        radial-gradient(140% 160% at 20% 18%, rgba(82,170,255,.12), transparent 55%),
+        radial-gradient(140% 160% at 88% 20%, rgba(148,92,255,.10), transparent 55%),
+        linear-gradient(180deg, rgba(255,255,255,.055), rgba(0,0,0,.44));
       box-shadow:0 30px 80px rgba(0,0,0,.70);
       overflow:hidden;
     }
-    .modal .content{position:relative; padding:18px}
-    .modal h2{margin:0 0 12px; font-size:15px; letter-spacing:.2px; opacity:.92}
-    .modal textarea{min-height:140px; width:100%; background:rgba(0,0,0,.34); border-color:rgba(255,255,255,.14)}
-    .modal .actions{display:flex; gap:12px; justify-content:flex-end; margin-top:14px; flex-wrap:wrap}
+
+    .modal .content{position:relative;padding:18px}
+    .modal h2{margin:0 0 12px;font-size:15px;letter-spacing:.2px;opacity:.92}
+    .modal textarea{min-height:140px;width:100%;background:rgba(0,0,0,.34);border-color:rgba(255,255,255,.14)}
+
+    .modal .actions{
+      display:flex;
+      gap:12px;
+      justify-content:flex-end;
+      margin-top:14px;
+      flex-wrap:wrap;
+    }
+
     .modal .actions button{min-width:130px}
 
     @media (max-width:420px){
       input,textarea{min-width:0}
-      .mini{min-width:0; flex:1}
+      .mini{min-width:0;flex:1}
       .pwbtn{min-width:110px}
       .pwwrap{min-width:0}
       body{padding:14px 0}
       .wrap{padding:0 14px 14px}
       .content{padding:16px}
-      .grid2{grid-template-columns:1fr}
       textarea{min-height:150px}
     }
   </style>
 </head>
 <body>
-  <div class="sky" aria-hidden="true"></div>
+  <div class="glow" aria-hidden="true"></div>
 
   <div class="wrap">
     <div class="shell">
       <div class="appbar">
         <div class="brand">
           <div class="t">AES-256-GCM</div>
-          <div class="s">PBKDF2 (SHA-256) + AES-GCM • v3 / v3f</div>
         </div>
         <div class="actions">
           <button id="btnSafe" class="pill">BẢO MẬT : TẮT</button>
@@ -196,23 +324,22 @@
         <div class="row">
           <div class="pwwrap">
             <input id="pass" type="password" placeholder="Mật khẩu" autocomplete="new-password" />
-            <button id="btnTogglePass" class="pwbtn">HIỆN</button>
+            <button id="btnTogglePass" class="pwbtn btnSoft">HIỆN</button>
           </div>
         </div>
 
         <div class="row grid2">
-          <button id="btnEncrypt" class="primary">MÃ HOÁ</button>
-          <button id="btnDecrypt">GIẢI MÃ</button>
+          <label for="file" id="btnPick" class="btnG">CHỌN FILE</label>
+          <button id="btnEncrypt" class="btnG">MÃ HOÁ</button>
         </div>
 
         <div class="row grid2">
-          <input id="file" type="file" hidden />
-          <label for="file" id="btnPick" class="pill">CHỌN FILE</label>
-          <button id="btnDownload" class="pill">TẢI FILE</button>
-          <button id="btnClear" class="danger">XOÁ</button>
+          <button id="btnDownload" class="btnSoft">TẢI FILE</button>
+          <button id="btnDecrypt" class="btnSoft">GIẢI MÃ</button>
         </div>
 
         <div class="row">
+          <input id="file" type="file" hidden />
           <div id="filemeta" class="filemeta mono">Chưa chọn file</div>
         </div>
 
@@ -221,8 +348,12 @@
         </div>
 
         <div class="row grid2">
-          <button id="btnCopy">SAO CHÉP</button>
-          <input id="out" placeholder="Kết quả (văn bản)" autocomplete="off" />
+          <button id="btnCopy" class="btnSoft">SAO CHÉP</button>
+          <button id="btnClear" class="danger">XOÁ</button>
+        </div>
+
+        <div class="row">
+          <input id="out" placeholder="Kết quả" autocomplete="off" />
         </div>
       </div>
     </div>
@@ -238,7 +369,7 @@
         <textarea id="modalPlainText" spellcheck="false" placeholder="Nhập nội dung..."></textarea>
         <div class="actions">
           <button id="modalPlainCancel">Huỷ</button>
-          <button id="modalPlainOk" class="primary">OK</button>
+          <button id="modalPlainOk" class="btnG">OK</button>
         </div>
       </div>
     </div>
@@ -252,7 +383,7 @@
         <textarea id="modalOutText" spellcheck="false" readonly></textarea>
         <div class="actions">
           <button id="modalOutCopy">Sao chép</button>
-          <button id="modalOutClose" class="primary">Đóng</button>
+          <button id="modalOutClose" class="btnG">Đóng</button>
         </div>
       </div>
     </div>
@@ -266,9 +397,7 @@
   const u8ToB64 = (u8) => {
     const CHUNK = 0x8000;
     let s = "";
-    for (let i = 0; i < u8.length; i += CHUNK) {
-      s += String.fromCharCode.apply(null, u8.subarray(i, i + CHUNK));
-    }
+    for (let i = 0; i < u8.length; i += CHUNK) s += String.fromCharCode.apply(null, u8.subarray(i, i + CHUNK));
     return btoa(s);
   };
 
@@ -465,10 +594,7 @@
     const nonce = crypto.getRandomValues(new Uint8Array(12));
     const aesKey = await deriveAesKeyFromPass(pass, salt, iters);
 
-    const ctAll = new Uint8Array(await crypto.subtle.encrypt(
-      { name:"AES-GCM", iv: nonce }, aesKey, enc.encode(plain)
-    ));
-
+    const ctAll = new Uint8Array(await crypto.subtle.encrypt({ name:"AES-GCM", iv: nonce }, aesKey, enc.encode(plain)));
     const ciphertext = ctAll.slice(0, ctAll.length - 16);
     const tag = ctAll.slice(ctAll.length - 16);
 
@@ -490,10 +616,7 @@
     const buf = await SELECTED_FILE.arrayBuffer();
     const data = new Uint8Array(buf);
 
-    const ctAll = new Uint8Array(await crypto.subtle.encrypt(
-      { name:"AES-GCM", iv: nonce }, aesKey, data
-    ));
-
+    const ctAll = new Uint8Array(await crypto.subtle.encrypt({ name:"AES-GCM", iv: nonce }, aesKey, data));
     const ciphertext = ctAll.slice(0, ctAll.length - 16);
     const tag = ctAll.slice(ctAll.length - 16);
 
@@ -543,11 +666,9 @@
         ctAll.set(ciphertext, 0);
         ctAll.set(tag, ciphertext.length);
 
-        const pt = new Uint8Array(await crypto.subtle.decrypt(
-          { name:"AES-GCM", iv: nonce }, aesKey, ctAll
-        ));
-
+        const pt = new Uint8Array(await crypto.subtle.decrypt({ name:"AES-GCM", iv: nonce }, aesKey, ctAll));
         const text = dec.decode(pt);
+
         LAST_DECRYPTED_FILE = null;
 
         if (SAFE_MODE) { $("out").value = ""; await showModalOut(text); }
@@ -577,13 +698,11 @@
         ctAll.set(ciphertext, 0);
         ctAll.set(tag, ciphertext.length);
 
-        const pt = new Uint8Array(await crypto.subtle.decrypt(
-          { name:"AES-GCM", iv: nonce }, aesKey, ctAll
-        ));
-
+        const pt = new Uint8Array(await crypto.subtle.decrypt({ name:"AES-GCM", iv: nonce }, aesKey, ctAll));
         LAST_DECRYPTED_FILE = { name: fileName || "file.bin", mime: mime || "application/octet-stream", bytes: pt };
 
         const msg = `Đã giải mã file: ${LAST_DECRYPTED_FILE.name} (${LAST_DECRYPTED_FILE.bytes.length} bytes)`;
+
         if (SAFE_MODE) { $("out").value = ""; await showModalOut(msg); }
         else $("out").value = msg;
 
